--- a/myPhone/main/mainWeb/login.html
+++ b/myPhone/main/mainWeb/login.html
@@ -17,6 +17,7 @@
             width:100%;
             height:100%;
             display:flex;
+            flex-direction:column;
             align-items:center;
             justify-content:center;
             -moz-user-select: none;
@@ -24,6 +25,7 @@
             -webkit-user-select: none;
             -webkit-user-drag: none;
             user-select: none;
+            background:rgba(230,230,230,0.5);
         }
         article.op::before
         {
@@ -43,6 +45,12 @@
             display:flex;
             flex-direction:column;
             align-items: center;
+        }
+        .nav{
+            width:100%;
+            height:7%;
+            position: relative;
+            outline:1px solid black;
         }
         .remind{
             max-width:25%;
@@ -237,7 +245,8 @@
     </style>
 </head>
 <body>
-    <article class="">
+    <article id="box">
+        <div class="nav"></div>
         <section class="major">
             <header>
                 <a href="">首页</a>
