--- a/myweb/index.html
+++ b/myweb/index.html
@@ -24,8 +24,8 @@
     <article id="box">
         <header>
             <div id="title">
-                <img src="img/more.png" alt="">
-                <a href="">LXL</a>
+                <img src="img/more.png" alt="more picture">
+                <a href="javascript:;">LXL</a>
             </div>
             <ul id="nav">
                 <li><a href="javascript:;">主页</a></li>
