--- a/myweb/calendar.html
+++ b/myweb/calendar.html
@@ -40,7 +40,7 @@
                 <li><a href="note.html">随笔</a></li>
                 <li><a href="cal.html">速算</a></li>
                 <li><a href="javascript:;">日历</a></li>
-                <li><a href="javascript:;">作品展示</a></li>
+                <li><a href="time.html">Time</a></li>
                 <li><a href="javascript:;">关于博客</a></li>
             </ul>
         </nav>
