--- a/myweb/cal.html
+++ b/myweb/cal.html
@@ -40,8 +40,8 @@
                 <li><a href="index.html">主页</a></li>
                 <li><a href="note.html">随笔</a></li>
                 <li><a href="cal.html">速算</a></li>
-                <li><a href="#">图片</a></li>
-                <li><a href="#">作品展示</a></li>
+                <li><a href="calendar.html">日历</a></li>
+                <li><a href="time.html">Time</a></li>
                 <li><a href="#">关于博客</a></li>
             </ul>
         </nav>
