--- a/myweb/note.html
+++ b/myweb/note.html
@@ -37,7 +37,7 @@
                 <li><a href="javascript:;" class="active">随笔</a></li>
                 <li><a href="cal.html">速算</a></li>
                 <li><a href="calendar.html">日历</a></li>
-                <li><a href="#">作品展示</a></li>
+                <li><a href="time.html">Time</a></li>
                 <li><a href="#">关于博客</a></li>
             </ul>
         </nav>
